--- a/config.json
+++ b/config.json
@@ -29,15 +29,17 @@
             "game_options":[
                 {"title":"참여", "text":"바이인 : 무료"},
                 {"title":"스타팅 칩", "text":"10,000"},
-                {"title":"블라인드", "text":"6분"}
+                {"title":"얼리 칩", "text":"5,000"},
+                {"title":"블라인드", "text":"5분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"식음료쿠폰 5장"}
+                {"title":"1등", "text":"월챔 쟁탈전 참가권 1장"},
+                {"title":"2등", "text":"3만 바인권"}
             ]
         },
         {
-            "name":"100% 프라이즈 ",
-            "display_name":"100% 프라이즈!",
+            "name":"이용권 3장",
+            "display_name":"월간챔피언 시드권 쟁탈전 3장",
             "data":[
                 [100,200,0,6],
                 [200,400,0,6],
@@ -58,19 +60,22 @@
                 [50000,100000,0,6]
             ],
             "game_options":[
-                {"title":"참여", "text":"바이인 : 1장"},
-                {"title":"스타팅 칩", "text":"15,000"},
-                {"title":"얼리(예약자)", "text":"+5,000"},
-                {"title":"리엔트리", "text":"30,000"},
-                {"title":"블라인드", "text":"6분"}
+                {"title":"참여", "text":"식음료 쿠폰 3장"},
+                {"title":"최대 엔트리", "text":"15"},
+                {"title":"스타팅칩", "text":"30,000"},
+                {"title":"1 리엔트리", "text":"40,000"},
+                {"title":"2 리엔트리", "text":"50,000"},
+                {"title":"레지마감", "text":"레벨 11"},
+                {"title":"블라인드", "text":"8분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"alldone 식음료쿠폰 5장"}
+                {"title":"1등", "text":"월간챔피언 시드권"},
+                {"title":"2등", "text":"3장 바인권"}
             ]
         },
         {
-            "name":"이용권 3장",
-            "display_name":"식음료 쿠폰 3장(Prize 75%)",
+            "name":"이용권 5장",
+            "display_name":"식음료 쿠폰 5장",
             "data":[
                 [100,200,0,7],
                 [200,400,0,7],
@@ -91,22 +96,22 @@
                 [50000,100000,0,7]
             ],
             "game_options":[
-                {"title":"참여", "text":"식음료 쿠폰 3장"},
-                {"title":"최대 엔트리", "text":"20"},
-                {"title":"스타팅칩", "text":"30,000"},
-                {"title":"1 리엔트리", "text":"40,000"},
-                {"title":"2 리엔트리", "text":"60,000"},
+                {"title":"참여", "text":"식음료 쿠폰 5장"},
+                {"title":"개인당 2리바인 가능", "text":"리바인 2개"},
+                {"title":"스타팅칩", "text":"50,000"},
+                {"title":"1 리바인", "text":"60,000"},
+                {"title":"2 리바인", "text":"70,000"},
                 {"title":"레지마감", "text":"레벨 11"},
-                {"title":"블라인드", "text":"8분"}
+                {"title":"블라인드", "text":"7분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":""},
-                {"title":"2등", "text":""}
+                {"title":"1등", "text":"50%"},
+                {"title":"2등", "text":"20%"}
             ]
         },
         {
-            "name":"이용권 5장",
-            "display_name":"식음료 쿠폰 5장",
+            "name":"이용권 10장",
+            "display_name":"식음료 쿠폰 10장",
             "data":[
                 [100,200,0,8],
                 [200,400,0,8],
@@ -127,23 +132,23 @@
                 [50000,100000,0,8]
             ],
             "game_options":[
-                {"title":"참여", "text":"식음료 쿠폰 5장"},
-                {"title":"최대 엔트리", "text":"16"},
-                {"title":"스타팅칩", "text":"40,000"},
-                {"title":"얼리(예약자)", "text":"+10,000"},
-                {"title":"1 리엔트리", "text":"60,000"},
-                {"title":"2 리엔트리", "text":"70,000"},
+                {"title":"참여", "text":"식음료 쿠폰 10장"},
+                {"title":"개인당 2리바인 가능", "text":"리바인 2개"},
+                {"title":"스타팅칩", "text":"60,000"},
+                {"title":"1 리엔트리", "text":"80,000"},
+                {"title":"2 리엔트리", "text":"100,000"},
                 {"title":"레지마감", "text":"레벨 11"},
-                {"title":"블라인드", "text":"9분"}
+                {"title":"블라인드", "text":"8분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":""},
-                {"title":"2등", "text":""}
+                {"title":"1등", "text":"50%"},
+                {"title":"2등", "text":"20%"},
+                {"title":"3등", "text":"10%"}
             ]
         },
         {
-            "name":"이용권 10장",
-            "display_name":"식음료 쿠폰 10장",
+            "name":"이용권 20장",
+            "display_name":"식음료 쿠폰 20장",
             "data":[
                 [100,200,0,9],
                 [200,400,0,9],
@@ -161,80 +166,9 @@
                 [20000,40000,0,9],
                 [30000,60000,0,9],
                 [40000,80000,0,9],
-                [50000,100000,0,9]
-            ],
-            "game_options":[
-                {"title":"참여", "text":"식음료 쿠폰 10장"},
-                {"title":"최대 엔트리", "text":"16"},
-                {"title":"스타팅칩", "text":"80,000"},
-                {"title":"1 리엔트리", "text":"100,000"},
-                {"title":"2 리엔트리", "text":"120,000"},
-                {"title":"레지마감", "text":"레벨 11"},
-                {"title":"블라인드", "text":"10분"}
-            ],
-            "giveaway":[
-                {"title":"1등", "text":""},
-                {"title":"2등", "text":""}
-            ]
-        },
-        {
-            "name":"이용권 10장",
-            "display_name":"식음료 쿠폰 15장",
-            "data":[
-                [100,200,0,10],
-                [200,400,0,10],
-                [400,800,0,10],
-                [600,1200,0,10],
-                [800,1600,0,10],
-                [-2,-1,0,5],
-                [1000,2000,0,10],
-                [2000,4000,0,10],
-                [4000,8000,0,10],
-                [6000,12000,0,10],
-                [8000,16000,0,10],
-                [-2,-1,0,5],
-                [10000,20000,0,10],
-                [20000,40000,0,10],
-                [30000,60000,0,10],
-                [40000,80000,0,10],
-                [50000,100000,0,10]
-            ],
-            "game_options":[
-                {"title":"참여", "text":"무료참여권 4장"},
-                {"title":"경기방식", "text":"리바인(1회)"},
-                {"title":"최대 엔트리", "text":"14"},
-                {"title":"스타팅 칩(사전예약자)", "text":"30,000(+10,000)"},
-                {"title":"리바인 칩", "text":"60,000"},
-                {"title":"블라인드", "text":"10분(칩체인지 후 8분)"}
-            ],
-            "giveaway":[
-                {"title":"1등", "text":""},
-                {"title":"2등", "text":""}
-            ]
-        },
-        {
-            "name":"이용권 20장",
-            "display_name":"식음료 쿠폰 20장",
-            "data":[
-                [100,200,0,12],
-                [200,400,0,12],
-                [400,800,0,12],
-                [600,1200,0,12],
-                [800,1600,0,12],
-                [-2,-1,0,5],
-                [1000,2000,0,12],
-                [2000,4000,0,12],
-                [4000,8000,0,12],
-                [6000,12000,0,12],
-                [8000,16000,0,12],
-                [-2,-1,0,5],
-                [10000,20000,0,12],
-                [20000,40000,0,12],
-                [30000,60000,0,12],
-                [40000,80000,0,12],
-                [50000,100000,0,12],
-                [60000,120000,0,12],
-                [70000,140000,0,12]
+                [50000,100000,0,9],
+                [60000,120000,0,9],
+                [70000,140000,0,9]
             ],
             "game_options":[
                 {"title":"참여", "text":"무료참여권 4장"},
