--- a/config.json
+++ b/config.json
@@ -184,57 +184,49 @@
             ]
         },
         {
-            "name":"오픈 이벤트대회",
-            "display_name":"액시스 오픈 이벤트대회",
+            "name":"10만 80%",
+            "display_name":"10만 80% 프라이즈",
             "data":[
-                [100,200,0,12],
-                [200,400,0,12],
-                [400,800,0,12],
-                [600,1200,0,12],
-                [800,1600,0,12],
+                [100,200,0,10],
+                [200,400,0,10],
+                [400,800,0,10],
+                [500,1000,0,10],
+                [600,1200,0,10],
+                [800,1600,0,10],
                 [-2,-1,0,5],
-                [1000,2000,2000,12],
-                [1500,3000,3000,12],
-                [2000,4000,4000,12],
-                [2500,5000,5000,12],
-                [3000,6000,6000,12],
-                [-2,-1,0,5],
+                [1000,2000,2000,10],
+                [2000,4000,4000,10],
                 [4000,8000,8000,10],
                 [5000,10000,10000,10],
                 [6000,12000,12000,10],
                 [8000,16000,16000,10],
+                [-2,-1,0,5],
                 [10000,20000,20000,10],
                 [20000,40000,40000,10],
-                [-2,-1,0,5],
                 [30000,60000,60000,10],
                 [40000,80000,80000,10],
                 [50000,100000,100000,10],
                 [60000,120000,120000,10],
+                [-2,-1,0,5],
+                [70000,140000,140000,10],
                 [80000,160000,160000,10],
                 [100000,200000,200000,10],
-                [-2,-1,0,5],
-                [150000,300000,300000,10],
                 [200000,400000,400000,10]
             ],
             "game_options":[
-                {"title":"참여", "text":"첫바인 무료/리바인,리엔트리 5장"},
-                {"title":"경기방식", "text":"2리바인 , 애드온"},
+                {"title":"참여", "text":"10장 엑시스 티켓"},
+                {"title":"경기방식", "text":"리엔트리 , 애드온"},
                 {"title":"최대 엔트리", "text":"40"},
-                {"title":"블라인드", "text":"12분/10분(애드온 후)"},
-                {"title":"바인마감", "text":"10레벨 레지마감"},
-                {"title":"스타팅 칩(사전예약자 )", "text":"30,000"},
-                {"title":"1리바인", "text":"40,000"},
-                {"title":"2리바인", "text":"50,000"},
-                {"title":"애드온", "text":"100,000"}
+                {"title":"블라인드", "text":"10분"},
+                {"title":"레지마감", "text":"2break"},
+                {"title":"스타팅 칩(사전예약자 )", "text":"70,000"},
+                {"title":"1리엔트리", "text":"80,000"},
+                {"title":"2리엔트리", "text":"100,000"},
+                {"title":"애드온", "text":"180,000"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"아이패드 에어 4세대 64기가"},
-                {"title":"2등", "text":"거북이 금 한돈+15장"},
-                {"title":"3등", "text":"에어팟 프로+10장"},
-                {"title":"4등", "text":"매장이용권 20장"},
-                {"title":"5등", "text":"매장이용권 15장"},
-                {"title":"6등", "text":"매장이용권 10장"},
-                {"title":"7등", "text":"매장이용권 5장"}
+                {"title":"1등", "text":""},
+                {"title":"2등", "text":""}
             ]
         },
         {
