--- a/config.json
+++ b/config.json
@@ -313,6 +313,58 @@
                 {"title":"1등", "text":""},
                 {"title":"2등", "text":""}
             ]
+        },
+        {
+            "name":"AK & 액시스 콜라보 대회",
+            "display_name":"AK & 액시스 콜라보 대회",
+            "data":[
+                [100,200,0,15],
+                [200,400,0,15],
+                [300,600,0,15],
+                [400,800,0,15],
+                [-2,-1,0,5],
+                [500,1000,0,15],
+                [600,1200,0,15],
+                [800,1600,0,15],
+                [1000,2000,2000,15],
+                [-2,-1,0,5],
+                [2000,4000,4000,15],
+                [3000,6000,6000,15],
+                [4000,8000,8000,15],
+                [5000,10000,10000,15],
+                [-2,-1,0,15],
+                [6000,12000,12000,10],
+                [8000,16000,16000,10],
+                [10000,20000,20000,10],
+                [20000,40000,40000,10],
+                [30000,60000,60000,10],
+                [40000,80000,80000,10],
+                [-2,-1,0,5],
+                [50000,100000,100000,10],
+                [60000,120000,120000,10],
+                [70000,140000,140000,10],
+                [80000,160000,160000,10],
+                [100000,200000,200000,10],
+                [-2,-1,0,5],
+                [150000,300000,300000,10],
+                [200000,400000,400000,10],
+                [300000,600000,600000,10]
+            ],
+            "game_options":[
+                {"title":"참여", "text":"10장 엑시스 티켓"},
+                {"title":"경기방식", "text":"리엔트리 , 애드온"},
+                {"title":"최대 엔트리", "text":"40"},
+                {"title":"블라인드", "text":"10분"},
+                {"title":"레지마감", "text":"2break"},
+                {"title":"스타팅 칩(사전예약자 )", "text":"70,000"},
+                {"title":"1리엔트리", "text":"80,000"},
+                {"title":"2리엔트리", "text":"100,000"},
+                {"title":"애드온", "text":"180,000"}
+            ],
+            "giveaway":[
+                {"title":"1등", "text":""},
+                {"title":"2등", "text":""}
+            ]
         }
     ]
 }
