--- a/config.json
+++ b/config.json
@@ -38,18 +38,60 @@
             ]
         },
         {
-            "name":"이용권 3장",
-            "display_name":"월간챔피언 시드권 쟁탈전 3장",
+            "name":"만원의 행복 1장 촬영권",
+            "display_name":"만원의 행복 100% prize",
+            "data":[
+                [100,200,0,5],
+                [200,400,0,5],
+                [400,800,0,5],
+                [500,1000,0,5],
+                [600,1200,0,5],
+                [800,1600,0,5],
+                [-2,-1,0,5],
+                [1000,2000,0,5],
+                [2000,4000,0,5],
+                [4000,8000,0,5],
+                [5000,10000,0,5],
+                [6000,12000,0,5],
+                [8000,16000,0,5],
+                [-2,-1,0,5],
+                [10000,20000,0,5],
+                [20000,40000,0,5],
+                [30000,60000,0,5],
+                [40000,80000,0,5],
+                [50000,100000,0,5],
+                [60000,120000,60000,5],
+                [70000,140000,70000,5],
+                [80000,160000,80000,5],
+                [100000,200000,100000,5]
+            ],
+            "game_options":[
+                {"title":"참여", "text":"바이인 : 무료"},
+                {"title":"스타팅 칩", "text":"10,000"},
+                {"title":"레지마감", "text":"1break(6레벨)"},
+                {"title":"최대 엔트리", "text":"10"},
+                {"title":"블라인드", "text":"5분"}
+            ],
+            "giveaway":[
+                {"title":"1등", "text":"70%"},
+                {"title":"2등", "text":"30%"}
+            ]
+        },
+        {
+            "name":"촬영권 3장 6분 블라인드",
+            "display_name":"촬영권 3장(70% prize)",
             "data":[
                 [100,200,0,6],
                 [200,400,0,6],
                 [400,800,0,6],
+                [500,1000,0,6],
                 [600,1200,0,6],
                 [800,1600,0,6],
                 [-2,-1,0,5],
                 [1000,2000,0,6],
                 [2000,4000,0,6],
                 [4000,8000,0,6],
+                [5000,10000,0,6],
                 [6000,12000,0,6],
                 [8000,16000,0,6],
                 [-2,-1,0,5],
@@ -57,35 +99,40 @@
                 [20000,40000,0,6],
                 [30000,60000,0,6],
                 [40000,80000,0,6],
-                [50000,100000,0,6]
+                [50000,100000,0,6],
+                [60000,120000,60000,6],
+                [70000,140000,70000,6],
+                [80000,160000,80000,6],
+                [100000,200000,100000,6]
             ],
             "game_options":[
-                {"title":"참여", "text":"식음료 쿠폰 3장"},
-                {"title":"최대 엔트리", "text":"15"},
+                {"title":"참여", "text":"촬영권 3장"},
+                {"title":"최대 엔트리", "text":"14"},
                 {"title":"스타팅칩", "text":"30,000"},
-                {"title":"1 리엔트리", "text":"40,000"},
-                {"title":"2 리엔트리", "text":"50,000"},
-                {"title":"레지마감", "text":"레벨 11"},
-                {"title":"블라인드", "text":"8분"}
+                {"title":"리엔트리", "text":"50,000"},
+                {"title":"레지마감", "text":"2break(13레벨)"},
+                {"title":"블라인드", "text":"6분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"월간챔피언 시드권"},
-                {"title":"2등", "text":"3장 바인권"}
+                {"title":"1등", "text":"230,000 gtd"},
+                {"title":"2등", "text":"60,000 gtd"}
             ]
         },
         {
-            "name":"이용권 5장",
-            "display_name":"식음료 쿠폰 5장",
+            "name":"촬영권 5장 7분",
+            "display_name":"촬영권 5장(80% prize)",
             "data":[
                 [100,200,0,7],
                 [200,400,0,7],
                 [400,800,0,7],
+                [500,1000,0,7],
                 [600,1200,0,7],
                 [800,1600,0,7],
                 [-2,-1,0,5],
                 [1000,2000,0,7],
                 [2000,4000,0,7],
                 [4000,8000,0,7],
+                [5000,10000,0,7],
                 [6000,12000,0,7],
                 [8000,16000,0,7],
                 [-2,-1,0,5],
@@ -93,61 +140,28 @@
                 [20000,40000,0,7],
                 [30000,60000,0,7],
                 [40000,80000,0,7],
-                [50000,100000,0,7]
+                [50000,100000,0,7],
+                [60000,120000,60000,7],
+                [80000,160000,80000,7],
+                [100000,200000,100000,7]
             ],
             "game_options":[
-                {"title":"참여", "text":"식음료 쿠폰 5장"},
-                {"title":"개인당 2리바인 가능", "text":"리바인 2개"},
+                {"title":"참여", "text":"촬영권 5장"},
+                {"title":"최대 엔트리", "text":"14"},
                 {"title":"스타팅칩", "text":"50,000"},
-                {"title":"1 리바인", "text":"60,000"},
-                {"title":"2 리바인", "text":"70,000"},
-                {"title":"레지마감", "text":"레벨 11"},
+                {"title":"리엔트리", "text":"70,000"},
+                {"title":"레지마감", "text":"2break(13레벨)"},
                 {"title":"블라인드", "text":"7분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"50%"},
-                {"title":"2등", "text":"20%"}
+                {"title":"1등", "text":"400,000 촬영권"},
+                {"title":"2등", "text":"100,000 촬영권"},
+                {"title":"3등", "text":"60,000 촬영권"}
             ]
         },
         {
-            "name":"이용권 6장 촬영권",
-            "display_name":"액시스 챔피언전",
-            "data":[
-                [100,200,0,7],
-                [200,400,0,7],
-                [400,800,0,7],
-                [600,1200,0,7],
-                [800,1600,0,7],
-                [-2,-1,0,5],
-                [1000,2000,0,7],
-                [2000,4000,0,7],
-                [4000,8000,0,7],
-                [6000,12000,0,7],
-                [8000,16000,0,7],
-                [-2,-1,0,5],
-                [10000,20000,0,7],
-                [20000,40000,0,7],
-                [30000,60000,0,7],
-                [40000,80000,0,7],
-                [50000,100000,0,7]
-            ],
-            "game_options":[
-                {"title":"참여", "text":"촬영권 6장"},
-                {"title":"맥스엔트리", "text":"14"},
-                {"title":"스타팅칩", "text":"50,000"},
-                {"title":"1 리엔트리", "text":"60,000"},
-                {"title":"2 리엔트리", "text":"70,000"},
-                {"title":"레지마감", "text":"레벨 11"},
-                {"title":"블라인드", "text":"7분"}
-            ],
-            "giveaway":[
-                {"title":"1등", "text":"AXS 카드 시드권%"},
-                {"title":"2등", "text":"120,000gtd(촬영권)"}
-            ]
-        },
-        {
-            "name":"이용권 10장",
-            "display_name":"식음료 쿠폰 10장",
+            "name":"촬영권 5장 8분",
+            "display_name":"촬영권 5장(80% prize)",
             "data":[
                 [100,200,0,8],
                 [200,400,0,8],
@@ -159,7 +173,7 @@
                 [1000,2000,0,8],
                 [2000,4000,0,8],
                 [4000,8000,0,8],
-                [5000,8000,0,8],
+                [5000,10000,0,8],
                 [6000,12000,0,8],
                 [8000,16000,0,8],
                 [-2,-1,0,5],
@@ -168,109 +182,28 @@
                 [30000,60000,0,8],
                 [40000,80000,0,8],
                 [50000,100000,0,8],
-                [50000,100000,100000,8]
+                [60000,120000,60000,8],
+                [70000,140000,70000,8],
+                [80000,160000,80000,8],
+                [100000,200000,100000,8]
             ],
             "game_options":[
-                {"title":"참여", "text":"식음료 쿠폰 10장"},
-                {"title":"개인당 2리바인 가능", "text":"리바인 2개"},
-                {"title":"스타팅칩", "text":"60,000"},
-                {"title":"1 리엔트리", "text":"80,000"},
-                {"title":"2 리엔트리", "text":"100,000"},
-                {"title":"레지마감", "text":"레벨 11"},
+                {"title":"참여", "text":"촬영권 5장"},
+                {"title":"최대 엔트리", "text":"14"},
+                {"title":"스타팅칩", "text":"50,000"},
+                {"title":"리엔트리", "text":"70,000"},
+                {"title":"레지마감", "text":"2break(13레벨)"},
                 {"title":"블라인드", "text":"8분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":"50%"},
-                {"title":"2등", "text":"20%"},
-                {"title":"3등", "text":"10%"}
+                {"title":"1등", "text":"400,000 촬영권"},
+                {"title":"2등", "text":"100,000 촬영권"},
+                {"title":"3등", "text":"60,000 촬영권"}
             ]
         },
         {
-            "name":"이용권 20장",
-            "display_name":"식음료 쿠폰 20장",
-            "data":[
-                [100,200,0,9],
-                [200,400,0,9],
-                [400,800,0,9],
-                [600,1200,0,9],
-                [800,1600,0,9],
-                [-2,-1,0,5],
-                [1000,2000,0,9],
-                [2000,4000,0,9],
-                [4000,8000,0,9],
-                [6000,12000,0,9],
-                [8000,16000,0,9],
-                [-2,-1,0,5],
-                [10000,20000,0,9],
-                [20000,40000,0,9],
-                [30000,60000,0,9],
-                [40000,80000,0,9],
-                [50000,100000,0,9],
-                [60000,120000,0,9],
-                [70000,140000,0,9]
-            ],
-            "game_options":[
-                {"title":"참여", "text":"무료참여권 4장"},
-                {"title":"경기방식", "text":"리바인(1회)"},
-                {"title":"최대 엔트리", "text":"14"},
-                {"title":"스타팅 칩(사전예약자)", "text":"30,000(+10,000)"},
-                {"title":"리바인 칩", "text":"60,000"},
-                {"title":"블라인드", "text":"10분(칩체인지 후 8분)"}
-            ],
-            "giveaway":[
-                {"title":"1등", "text":""},
-                {"title":"2등", "text":""}
-            ]
-        },
-        {
-            "name":"10만 80%",
-            "display_name":"10만 80% 프라이즈",
-            "data":[
-                [100,200,0,7],
-                [200,400,0,7],
-                [400,800,0,7],
-                [500,1000,0,7],
-                [600,1200,0,7],
-                [800,1600,0,7],
-                [-2,-1,0,8],
-                [1000,2000,2000,7],
-                [2000,4000,4000,7],
-                [4000,8000,8000,7],
-                [5000,10000,10000,7],
-                [6000,12000,12000,7],
-                [8000,16000,16000,7],
-                [-2,-1,0,8],
-                [10000,20000,20000,7],
-                [20000,40000,40000,7],
-                [30000,60000,60000,7],
-                [40000,80000,80000,7],
-                [50000,100000,100000,7],
-                [60000,120000,120000,7],
-                [-2,-1,0,8],
-                [70000,140000,140000,7],
-                [80000,160000,160000,7],
-                [100000,200000,200000,7],
-                [200000,400000,400000,7]
-            ],
-            "game_options":[
-                {"title":"참여", "text":"10장 엑시스 티켓"},
-                {"title":"경기방식", "text":"리엔트리 , 애드온"},
-                {"title":"최대 엔트리", "text":"40"},
-                {"title":"블라인드", "text":"10분"},
-                {"title":"레지마감", "text":"2break"},
-                {"title":"스타팅 칩(사전예약자 )", "text":"70,000"},
-                {"title":"1리엔트리", "text":"80,000"},
-                {"title":"2리엔트리", "text":"100,000"},
-                {"title":"애드온", "text":"180,000"}
-            ],
-            "giveaway":[
-                {"title":"1등", "text":""},
-                {"title":"2등", "text":""}
-            ]
-        },
-        {
-            "name":"10만 80%",
-            "display_name":"10만 80% 프라이즈",
+            "name":"촬영권 10장 8분",
+            "display_name":"촬영권 10장(80% prize)",
             "data":[
                 [100,200,0,8],
                 [200,400,0,8],
@@ -278,40 +211,36 @@
                 [500,1000,0,8],
                 [600,1200,0,8],
                 [800,1600,0,8],
-                [-2,-1,0,8],
-                [1000,2000,2000,8],
-                [2000,4000,4000,8],
-                [4000,8000,8000,8],
-                [5000,10000,10000,8],
-                [6000,12000,12000,8],
-                [8000,16000,16000,8],
-                [-2,-1,0,8],
-                [10000,20000,20000,8],
-                [20000,40000,40000,8],
-                [30000,60000,60000,8],
-                [40000,80000,80000,8],
-                [50000,100000,100000,8],
-                [60000,120000,120000,8],
-                [-2,-1,0,8],
-                [70000,140000,140000,8],
-                [80000,160000,160000,8],
-                [100000,200000,200000,8],
-                [200000,400000,400000,8]
+                [-2,-1,0,5],
+                [1000,2000,0,8],
+                [2000,4000,0,8],
+                [4000,8000,0,8],
+                [5000,10000,0,8],
+                [6000,12000,0,8],
+                [8000,16000,0,8],
+                [-2,-1,0,5],
+                [10000,20000,0,8],
+                [20000,40000,0,8],
+                [30000,60000,0,8],
+                [40000,80000,0,8],
+                [50000,100000,0,8],
+                [60000,120000,60000,8],
+                [70000,140000,70000,8],
+                [80000,160000,80000,8],
+                [100000,200000,100000,8]
             ],
             "game_options":[
-                {"title":"참여", "text":"10장 엑시스 티켓"},
-                {"title":"경기방식", "text":"리엔트리 , 애드온"},
-                {"title":"최대 엔트리", "text":"40"},
-                {"title":"블라인드", "text":"10분"},
-                {"title":"레지마감", "text":"2break"},
-                {"title":"스타팅 칩(사전예약자 )", "text":"70,000"},
-                {"title":"1리엔트리", "text":"80,000"},
-                {"title":"2리엔트리", "text":"100,000"},
-                {"title":"애드온", "text":"180,000"}
+                {"title":"참여", "text":"촬영권 10장"},
+                {"title":"최대 엔트리", "text":"14"},
+                {"title":"스타팅칩", "text":"80,000"},
+                {"title":"리엔트리", "text":"100,000"},
+                {"title":"레지마감", "text":"2break(13레벨)"},
+                {"title":"블라인드", "text":"8분"}
             ],
             "giveaway":[
-                {"title":"1등", "text":""},
-                {"title":"2등", "text":""}
+                {"title":"1등", "text":"700,000 촬영권"},
+                {"title":"2등", "text":"300,000 촬영권"},
+                {"title":"3등", "text":"120,000 촬영권"}
             ]
         },
         {
@@ -339,7 +268,7 @@
                 [40000,80000,40000,10],
                 [50000,100000,50000,10],
                 [60000,120000,60000,10],
-                [-2,-1,0,8],
+                [-2,-1,0,5],
                 [70000,140000,70000,10],
                 [80000,160000,80000,10],
                 [100000,200000,100000,10],
@@ -348,7 +277,7 @@
                 [400000,800000,400000,10]
             ],
             "game_options":[
-                {"title":"참여", "text":"20장 엑시스 티켓"},
+                {"title":"참여", "text":"20장 촬영권"},
                 {"title":"경기방식", "text":"리엔트리"},
                 {"title":"최대 엔트리", "text":"50"},
                 {"title":"블라인드", "text":"12분/10분"},
