--- a/config.json
+++ b/config.json
@@ -277,10 +277,10 @@
                 [2500,5000,5000,15],
                 [3000,6000,6000,15],
                 [-2,-1,0,20],
-                [4000,8000,8000,10],
-                [5000,10000,10000,10],
-                [6000,12000,12000,10],
-                [8000,16000,16000,10],
+                [4000,8000,8000,15],
+                [5000,10000,10000,15],
+                [6000,12000,12000,15],
+                [8000,16000,16000,15],
                 [-2,-1,0,5],
                 [10000,20000,20000,10],
                 [20000,40000,40000,10],
@@ -291,20 +291,19 @@
                 [-2,-1,0,5],
                 [80000,160000,160000,10],
                 [100000,200000,200000,10],
-                [200000,400000,400000,10],
-                [300000,600000,600000,10],
-                [400000,800000,800000,10],
-                [500000,1000000,1000000,10]
+                [120000,240000,240000,10],
+                [150000,300000,300000,10]
             ],
             "game_options":[
                 {"title":"참여", "text":"10장 촬영권"},
                 {"title":"경기방식", "text":"리엔트리"},
                 {"title":"최대 엔트리", "text":"120"},
                 {"title":"블라인드", "text":"15분/10분"},
-                {"title":"레지마감", "text":"3break(13레벨전)"},
+                {"title":"레지마감", "text":"3break(17레벨전)"},
                 {"title":"스타팅 칩", "text":"60,000"},
                 {"title":"예약자", "text":"10,000 추가"},
                 {"title":"lv.4이전 참가", "text":"10,000 추가"},
+                {"title":"애드온", "text":"150,000"},
                 {"title":"리엔트리", "text":"100,000"}
             ],
             "giveaway":[
